记账app优化，新增多个小工具；试图优化ai 调用链路